--- a/.github/workflows/webdev-selfPublish-build.yaml
+++ b/.github/workflows/webdev-selfPublish-build.yaml
@@ -37,7 +37,7 @@ jobs:
           CI: true
           SITE_URL: ${{ inputs.site-url }}
         run: |
-          npm ci
+          npm i
           npm run build
           npm run generate
 
