--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@vuelidate/core": "^2.0.3",
     "@vuelidate/validators": "^2.0.4",
     "@vueuse/nuxt": "^10.4.1",
+    "bootstrap": "^5.3.2",
     "requrl": "^3.0.2",
     "sitemap": "^7.1.1",
     "vue": "^3.3.4"
