--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "analyze": "nuxt analyze"
   },
   "dependencies": {
+    "@esbuild/darwin-x64": "^0.19.7",
     "@shopware-pwa/api-client": "canary",
     "@shopware-pwa/cms-base": "canary",
     "@shopware-pwa/composables-next": "canary",
@@ -23,6 +24,7 @@
     "@vuelidate/core": "^2.0.3",
     "@vuelidate/validators": "^2.0.4",
     "@vueuse/nuxt": "^10.4.1",
+    "axios": "^1.6.2",
     "bootstrap": "^5.3.2",
     "requrl": "^3.0.2",
     "sitemap": "^7.1.1",
