--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
     "analyze": "nuxt analyze"
   },
   "dependencies": {
-    "@esbuild/darwin-x64": "^0.19.7",
     "@shopware-pwa/api-client": "canary",
     "@shopware-pwa/cms-base": "canary",
     "@shopware-pwa/composables-next": "canary",
@@ -26,6 +25,7 @@
     "@vueuse/nuxt": "^10.4.1",
     "axios": "^1.6.2",
     "bootstrap": "^5.3.2",
+    "esbuild": "^0.19.7",
     "requrl": "^3.0.2",
     "sitemap": "^7.1.1",
     "vue": "^3.3.4"
