--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "analyze": "nuxt analyze"
   },
   "dependencies": {
+    "@headlessui/vue": "^1.7.16",
+    "@heroicons/vue": "^2.0.18",
     "@shopware-pwa/api-client": "canary",
     "@shopware-pwa/cms-base": "canary",
     "@shopware-pwa/composables-next": "canary",
@@ -31,6 +33,7 @@
     "vue": "^3.3.4"
   },
   "devDependencies": {
+    "@headlessui/vue": "^1.7.16",
     "@iconify-json/carbon": "^1.1.21",
     "@nuxt/devtools": "^0.8.4",
     "@nuxtjs/i18n": "8.0.0-rc.4",
@@ -38,6 +41,7 @@
     "eslint-plugin-prettier": "^5.0.0",
     "eslint-plugin-vue": "^9.17.0",
     "nuxt": "^3.7.3",
+    "nuxt-headlessui": "^1.1.4",
     "typescript": "^5.2.2",
     "vue-eslint-parser": "^9.3.1",
     "vue-tsc": "^1.8.11"
