--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
     "analyze": "nuxt analyze"
   },
   "dependencies": {
-    "@headlessui/vue": "^1.7.16",
     "@heroicons/vue": "^2.0.18",
     "@shopware-pwa/api-client": "canary",
     "@shopware-pwa/cms-base": "canary",
@@ -34,20 +33,19 @@
     "vue": "^3.3.4"
   },
   "devDependencies": {
-    "@headlessui/vue": "^1.7.16",
+    "@headlessui/vue": "^0.0.0-insiders.24486b3",
     "@iconify-json/carbon": "^1.1.21",
     "@nuxt/devtools": "^0.8.4",
     "@nuxtjs/i18n": "8.0.0-rc.4",
-    "@nuxtjs/tailwindcss": "^6.11.0",
+    "@nuxtjs/tailwindcss": "^6.10.1",
     "@vue/eslint-config-typescript": "^12.0.0",
-    "autoprefixer": "^10.4.17",
-    "daisyui": "^4.6.0",
+    "autoprefixer": "^10.4.16",
     "eslint-plugin-prettier": "^5.0.0",
     "eslint-plugin-vue": "^9.17.0",
     "nuxt": "^3.7.3",
     "nuxt-headlessui": "^1.1.4",
-    "postcss": "^8.4.33",
-    "tailwindcss": "^3.4.1",
+    "postcss": "^8.4.31",
+    "tailwindcss": "^3.3.5",
     "typescript": "^5.2.2",
     "vue-eslint-parser": "^9.3.1",
     "vue-tsc": "^1.8.11"
