--- a/package.json
+++ b/package.json
@@ -38,10 +38,13 @@
     "@nuxt/devtools": "^0.8.4",
     "@nuxtjs/i18n": "8.0.0-rc.4",
     "@vue/eslint-config-typescript": "^12.0.0",
+    "autoprefixer": "^10.4.16",
     "eslint-plugin-prettier": "^5.0.0",
     "eslint-plugin-vue": "^9.17.0",
     "nuxt": "^3.7.3",
     "nuxt-headlessui": "^1.1.4",
+    "postcss": "^8.4.31",
+    "tailwindcss": "^3.3.5",
     "typescript": "^5.2.2",
     "vue-eslint-parser": "^9.3.1",
     "vue-tsc": "^1.8.11"
