--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@heroicons/vue": "^2.0.18",
     "@shopware-pwa/api-client": "canary",
     "@shopware-pwa/cms-base": "canary",
+    "@shopware-pwa/composables": "^1.6.1",
     "@shopware-pwa/composables-next": "canary",
     "@shopware-pwa/helpers-next": "canary",
     "@shopware-pwa/nuxt3-module": "canary",
@@ -25,7 +26,7 @@
     "@vuelidate/core": "^2.0.3",
     "@vuelidate/validators": "^2.0.4",
     "@vueuse/nuxt": "^10.4.1",
-    "axios": "^1.6.2",
+    "axios": "^1.6.7",
     "bootstrap": "^5.3.2",
     "esbuild": "^0.19.11",
     "requrl": "^3.0.2",
