--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "axios": "^1.6.7",
     "bootstrap": "^5.3.2",
     "esbuild": "^0.19.11",
+    "firebase": "^10.8.0",
     "requrl": "^3.0.2",
     "sitemap": "^7.1.1",
     "vue": "^3.3.4"
